--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'realm-android'
+
 
 android {
     compileSdkVersion 29
@@ -35,6 +34,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:1.1.0-rc01"
     implementation 'androidx.core:core-ktx:1.2.0'
+    implementation "org.jetbrains.anko:anko-commons:0.10.4"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
@@ -93,4 +93,5 @@ dependencies {
 
     //for arcprogress
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
+
 }
