--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,16 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
+    ext.realm_version = '5.10.0'
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath "io.realm:realm-gradle-plugin:$realm_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
